// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consumer 1`] = `
<DocumentFragment>
  1
</DocumentFragment>
`;

exports[`handle return undefined from state function 1`] = `
<DocumentFragment>
  <div>
    content
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 1
    <div>
      <button>
        Change Store
      </button>
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 1
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 3`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 2
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 4`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 3
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`provider initialize 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`provider initialize 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    2
  </div>
</DocumentFragment>
`;

exports[`provider initialize with args 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    5
  </div>
</DocumentFragment>
`;

exports[`provider initialize with args 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    6
  </div>
</DocumentFragment>
`;

exports[`provider memo 1`] = `
<DocumentFragment>
  <p>
    1
  </p>
  <p>
    1
  </p>
  <p>
    1
  </p>
</DocumentFragment>
`;

exports[`provider memo 2`] = `
<DocumentFragment>
  <p>
    2
  </p>
  <p>
    2
  </p>
  <p>
    1
  </p>
</DocumentFragment>
`;

exports[`rerender on dependency update 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`rerender on dependency update 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    3
  </div>
</DocumentFragment>
`;

exports[`storeRef 1`] = `
Object {
  "current": null,
}
`;

exports[`storeRef 2`] = `
Object {
  "current": Object {
    "setX": [Function],
    "x": 1,
  },
}
`;

exports[`useStoreOptionally 1`] = `
<DocumentFragment>
  <div>
    false
  </div>
</DocumentFragment>
`;
